# calendario-rommies

./: .gitignore  Cargo.toml  junio.yaml
src/: calendario.rs  main.rs
src/rommies/: actividades.rs  calendario.rs  mod.rs
